fix light-mode border colour being too light, fixed macos reversed window control, cleaned up ribbon bar

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ html, body {
   --titlebar-colour: var(--light-gray2);
   --body-colour: var(--light-gray5);
   --titlebar-lower-colour: var(--light-gray4);
-  --border-colour: var(--light-gray1);
+  --border-colour: var(--gray5);
 
   --regular-text: var(--black);
   --subtle-text: var(--gray1);
@@ -183,9 +183,12 @@ html, body {
   padding-left: 7px;
   padding-right: 7px;
   user-select: none;
+  display: flex;
+  flex-direction: row;
 }
 
-.titlebar\:display > .titlebar\:text {
+.titlebar\:display > .titlebar\:display\:left > .titlebar\:text,
+.titlebar\:display > .titlebar\:display\:right > .titlebar\:text {
   line-height: 20px;
 }
 
@@ -194,11 +197,20 @@ html, body {
 }
 
 .titlebar\:display\:right {
-  float: right;
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
 }
 
 .titlebar\:display\:left {
-  float: left;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.titlebar\:display\:divider {
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .content {
